# GildedRose-Refactoring-Kata

./: .bettercodehub.yml  .classpath  .coverage  .gitattributes  .gitignore  .nycrc.js  .project  .travis.yml  CONTRIBUTING.md  CSDT-2022-1.md  Dev-Env-Setup.md  Dockerfile  GildedRose.sln  GildedRose.vcxproj  GildedRose.vcxproj.filters  GildedRoseRequirements.md  GildedRoseRequirements.txt  GildedRoseRequirements_ar.md  GildedRoseRequirements_de.md  GildedRoseRequirements_en.md  GildedRoseRequirements_es.md  GildedRoseRequirements_eu.md  GildedRoseRequirements_fr.md  GildedRoseRequirements_fr.txt  GildedRoseRequirements_gl.md  GildedRoseRequirements_it.md  GildedRoseRequirements_jp.md  GildedRoseRequirements_kr.md  GildedRoseRequirements_nl.md  GildedRoseRequirements_pl.md  GildedRoseRequirements_pt-BR.md  GildedRoseRequirements_ru.md  GildedRoseRequirements_ru.txt  GildedRoseRequirements_th.md  GildedRoseRequirements_tr.txt  GildedRoseRequirements_ua.md  GildedRoseRequirements_zh.txt  GildedRoseTest.test_foo.approved.txt  GildedRoseTest.test_update_quality.approved.txt  Guardfile  (+24 more)
.github/: pull_request_template.md
Ada/: .gitignore  Makefile  README.txt  gilded_rose.adb  gilded_rose.ads  gilded_rose_tester.adb  gilded_rose_tests.adb  gilded_rose_tests.ads  items.adb  items.ads  program.adb
C/: GildedRose.c  GildedRose.h  GildedRoseTextTests.c  GildedRoseUnitTests.cc  Makefile  README.txt  run-once.sh
Delphi/: .gitattributes  .gitignore  GildedRose.groupproj  GildedRose.pas  GildedRoseTests.pas  Item.pas  README.md  TextTestFixture.dpr  TextTestFixture.dproj  UnitTests.dpr  UnitTests.dproj  UnitTests.res
GildedRose/: GildedRoseRequirements.txt  README  README.md
Groovy/: .gitignore  README.txt  build.gradle  readme.txt
Java/: .classpath  .gitignore  .project  PROJECT_ANALYSIS.md  README.md  SECURITY_ANALYSIS.md  approach.md  base-output.csv  build.gradle  chris-readme.txt  gradle.properties  pom.xml  readme.md  requirements.md  run-gradle.sh  run-maven.sh  texttest_rig.py
Java-Approvals/: .gitignore  README.md  build.gradle  pom.xml
Java-Cucumber/: .classpath  .gitignore  .project  README.md  build.gradle  pom.xml
Java-Spock/: .gitignore  build.gradle
JavaScript/: package.json
Kotlin/: .gitignore  README.md  build.gradle  build.gradle.kts  local.properties  texttest_rig.py
Matlab/: .gitignore  GildedRose.m  Item.m  TestGildedRose.m  TextTest.m
R/: .project  gilded_rose.R  item.R  runit_gilded_rose.R  test_setup.R  texttest_fixture.R
Smalltalk/: GildedRose.st
Team Green/: team-members.txt
Team Grey/: team-members.txt
Tennis/: README.md
TestNinja/: TestNinja.sln
TypeScript/: .eslintrc  .gitignore  .mocharc.js  .nvmrc  .prettierignore  .prettierrc  README.md  jest.config.js  jest.config.ts  package-lock.json  package.json  texttest_rig.py  tsconfig.json  vitest.config.ts  webpack.config.ts
TypeScript-deno/: README.md  deno.json  texttest_rig.py
Yahtzee/: README  README.md
abap/: README.md  YY_PAO_GILDED_ROSE.abap
app/: gilded-rose.ts
bash/: README.md  gilded_rose.sh  texttest_fixture.sh  unit_test.sh  verify.sh
c-check/: .gitignore  Makefile  README  README.md  golden-rule.sh  golden_rose  test_backstage.c  test_brie.c  test_main.c  test_normal.c  test_rose.c
c99/: .gitignore  CMakeLists.txt  GildedRose.c  GildedRose.h  GildedRoseTextTests.c  Makefile  run-once-cmake.sh  test_main.c  test_unity_gildedrose.c
c_cmocka/: .gitignore  CMakeLists.txt  GildedRoseTextTests.c  README.md
c_cmocka/test-cmocka/: CMakeLists.txt
c_cmocka/test-cmocka/sample_test/: CMakeLists.txt  sample_test.c
cpp/: .gitignore  CMakeLists.txt  GildedRoseApprovalMain.cc  GildedRoseApprovalTests.cc  Makefile  README.md  run-approval-once.sh
cpp-catch2/: .gitignore  CMakeLists.txt  README.md
cpp-catch2/src/: GildedRose.cc
cpp-catch2/test/: ApprovalTests.hpp  gildedrose_catch.cpp  main.cpp
cpp/lib/: ApprovalTests.hpp  ApprovalTests.v.6.0.0.hpp  CMakeLists.txt
cpp/src/: CMakeLists.txt  GildedRose.cc  GildedRose.h
cpp/test/: CMakeLists.txt
cpp/test/cpp_catch2_approvaltest/: CMakeLists.txt  GildedRoseCatch2ApprovalTests.GildedRoseApprovalTests.approved.txt  GildedRoseCatch2ApprovalTests.cc
cpp/test/cpp_catch2_unittest/: CMakeLists.txt  GildedRoseCatch2UnitTests.cc
cpp/test/cpp_googletest_approvaltest/: CMakeLists.txt  GildedRoseGoogletestApprovalTests.cc  googletest_approval_main.cc
cpp/test/cpp_googletest_unittest/: CMakeLists.txt  GildedRoseGoogletestUnitTests.cc
cpp/test/cpp_texttest/: CMakeLists.txt  GildedRoseTextTests.cc
fortran/: CMakeLists.txt  README.md
fortran/src/: GildedRose.f90
fortran/test/: GildedRose_text_test.f90  GildedRose_unity_test.f90
haskell/: .gitignore  README.md  gilded-rose.cabal  install_deps.sh  run.sh  test.sh
haskell/src/: GildedRose.hs  Main.hs
haskell/test/: GildedRoseSpec.hs
ocaml/: .ocamlformat  README.md  dune-project  gilded_rose.opam
ocaml/lib/: dune  gilded_rose.ml
ocaml/test/: dune  gilded_rose.ml
python/: .gitignore  .pylintrc  Design_Explanation.txt  Documentation.md  GildedRoseRequirements.txt  GildedRose_Design_Document.md  README.md  aged_brie.py  backstage.py  baseline.txt  conjured.py  constants.py  factory_item.py  gilded_rose.py  helper.py  item.py  item_handler.py  item_wrappers.py  items.py  models.py  package-lock.json  pyproject.toml  requirements.txt  sulfuras.py  test_gilded_rose.py  texttest_fixture.py  unit_tests_gilded_rose.py
python/.github/workflows/: lint-and-test.yml
python/components/: gilded_rose.py
python/models/: items.py
python/plans/: gilded-rose-strategy-refactor.md
python/src/: aged_brie.py  backstage_passes.py  conjured.py  main.py  normal_item_logic.py  sulfuras.py
python/tests/: approvaltests_config.json  gilded_rose.py  test_aged_brie.py  test_backstage_pass.py  test_backstage_passes.py  test_conjured.py  test_gilded_rose.py  test_gilded_rose_approvals.py  test_gilded_rose_integration.py  test_item.py  test_main.py  test_sulfuras.py
python/tests/approved_files/: test_gilded_rose_approvals.test_gilded_rose_approvals.approved.txt
(+1774 files in other folders)
