name:                gilded-rose
version:             0.1.0.0
synopsis:            Haskell-port of the gilded rose kata
license:             GPL
author:              Sven Heyll
maintainer:          sven.heyll@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:   GildedRose
  build-depends:     base >=4.7
  hs-source-dirs:    src
  default-language:  Haskell2010

executable gilded-rose
  main-is:           Main.hs
  build-depends:     gilded-rose, base >=4.7 
  hs-source-dirs:    src
  default-language:  Haskell2010
  other-modules:     GildedRose

test-suite spec
  type:              exitcode-stdio-1.0
  ghc-options:       -Wall
  hs-source-dirs:    test
  default-language:  Haskell2010
  main-is:           Spec.hs
  other-modules:     GildedRoseSpec
  build-depends:     base >=4.7
                   , gilded-rose
                   , hspec
                   , hspec-expectations
                   , QuickCheck
