(lang dune 3.11)
(generate_opam_files true)

(name gilded_rose)
(source
 (github emilybache/GildedRose-Refactoring-Kata))
(authors "Maiste <dev@maiste.fr>")
(maintainers "Maiste <dev@maiste.fr>")
(license MIT)
(documentation https://github.com/emilybache/GildedRose-Refactoring-Kata)

(package
 (name gilded_rose)
 (synopsis "Gilded Rose Refactoring Kata")
 (description "The Gilded Rose Refactoring Kata in OCaml")
 (depends
   (ocaml (>= 4.08))
   dune
   (alcotest (>= 1.7.0))))

