[project]
name = "guilded-rose"
version = "0.1.0"
description = "Guilded Rose Python Refactoring Excercise for Blend360"
authors = [
    {name = "Vasu Bhatia",email = "git@vbh.ai"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ANN", # flake8-annotations (type hints)
    "D",   # pydocstyle (docstrings)
]
ignore = [
    "D203",  # one-blank-line-before-class (conflicts with D211)
    "D213",  # multi-line-summary-second-line (conflicts with D212)
    "ANN101", # missing-type-self
    "ANN102", # missing-type-cls
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "approvaltests (>=16.1.0,<17.0.0)",
    "pytest-approvaltests (>=0.2.4,<0.3.0)",
    "coverage (>=7.12.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
